# Gesturizer

./: .gitignore  demo_q_recognition.py  demo_shape_recognition.py  main.py  monitor.py  pyproject.toml  requirements.txt  test_qdollar.py  tl.py
touchscreen_listener/: __init__.py
touchscreen_listener/config/: settings.py
touchscreen_listener/core/: listener.py
touchscreen_listener/device/: device_manager.py
touchscreen_listener/gestures/: __init__.py  dollar_recognizer.py  gesture_detector.py  hybrid_classifier.py  ml_classifier.py  path_classifier.py  pc_templates.json  point_cloud_recognizer.py  qdollar_recognizer.py  statistical_classifier.py  templates.json
touchscreen_listener/utils/: __init__.py  gesture_utils.py  logger.py  path_simplifier.py
