[tool.poetry]
name = "touchscreen-events"
version = "0.1.0"
description = "Bare-bones touchscreen event listener for Linux"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tl.py"}]

[tool.poetry.scripts]
tl = "tl:main"

[tool.poetry.dependencies]
python = "^3.8"
evdev = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"