[tool.poetry]
name = "touchscreen-events"
version = "2.0.0"
description = "A modular touchscreen event listener for gesture recognition"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "touchscreen_listener"}]

[tool.poetry.scripts]
tl = "touchscreen_listener.core.listener:main"
main = "main:main"

[tool.poetry.dependencies]
python = "^3.8"
evdev = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"